# BedwarsBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
assets/: constants.ts  index.ts
assets/bedwars/: maps.json
commands/: base.command.ts  calculate.ts  compare.ts  dev.ts  link.ts  rotation.ts  session.ts  stats.ts  test.js  test.ts  unlink.ts
commands/types/: base.ts
messages/: base.ts  error.ts
messages/types/: interaction.content.ts
services/: hypixel.api.js  hypixel.api.ts  hypixel.ts  index.ts  mojang.js  mojang.ts  mongo.ts
services/api/: hypixel.ts  mojang.ts  polsu.ts
services/types/: bedwars.ts  index.ts  player.ts  polsu.ts  session.ts
src/: canvas.rs  main.rs
src/commands/: stats.rs
src/services/: hypixel.rs  minecraft.rs  mod.rs  render.rs
src/types/: cache.rs  colors.rs  error.rs  mod.rs  text_renderer.rs  utils.rs
src/types/hypixel/: achievements.rs  bedwars.rs  mod.rs  stats.rs
src/types/ui/: canvas.rs  colors.rs  content_box.rs  images.rs  mod.rs  player_render.rs  prestige.rs  text_renderer.rs
util/: cache.ts  canvas.ts  index.js  index.ts  prestige.ts  slashCommands.js  slashCommands.ts
util/assets/: index.js  index.ts
util/logging/: index.js  index.ts
