[package]
name = "Mango3"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
tracing = { version = "0.1.41", features = ["log"] }
skia-safe = "0.81.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tracing-subscriber = "0.3.19"
regex = "1.11.1"
num-format = "0.4.4"
num-traits = "0.2.19"
